test-cases/final-dump/unbound_after_for.wybe
for ?i in [] { !println i:int } 
!println i